tests/spec/compile-pass/049_scoped_allocator_local_owner.zn
// category: compile-pass
// profile: hosted
// purpose: scoped allocator owners can be used while the allocator is alive

module tests.pass.scopedAllocatorLocalOwner;

fn buildLocal(mut arena: ArenaAllocator) {
    val bytes = Vector<U8>.withCapacityIn(1024, mut arena);
    consume(bytes.asSlice());
}

fn consume(bytes: ArraySlice<U8>) {
    val _ = bytes.len;
}

