tests/spec/compile-fail/084_scoped_allocator_owner_future_escape.zn
// category: compile-fail
// profile: hosted
// purpose: scoped allocator owners cannot be stored in async future state

module tests.fail.scopedAllocatorOwnerFutureEscape;

async fn bad(move arena: ArenaAllocator) -> USize {
    val bytes = Vector<U8>.withCapacityIn(1024, mut arena);
    await tick();
    return bytes.len; // expected-error: scoped allocation cannot cross await into future state
}
